k8s/dan-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dan-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8s.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dan-gateway-service
                port:
                  number: 80
